@@ -1,3 +1,5 @@
-noinst_PROGRAMS = xmlgrep
+noinst_PROGRAMS = xmlgrep printxml
 
 xmlgrep_SOURCES = xmlgrep.c xml.c xml.h
+
+printxml_SOURCES = printxml.c xml.c
